fixed festive delight

--- a/assets/festive_delight/lang/ru_ru.json
+++ b/assets/festive_delight/lang/ru_ru.json
@@ -1,6 +1,6 @@
 {
     "item.festive_delight.cinnamon_sticks": "Палочки корицы",
-    "item.festive_delight.gingerbread_man_cutter": "Формочка пряни",
+    "item.festive_delight.gingerbread_man_cutter": "Формочка Пряни",
     "item.festive_delight.star_cutter": "Формочка звезды",
     "block.festive_delight.spread_ginger_bread_dough": "Имбирное тесто",
     "item.festive_delight.gingerbread_cookie_dough_star": "Имбирное тесто в форме звезды",
@@ -10,7 +10,7 @@
     "item.festive_delight.christmas_tea": "Новогодний чай",
     "item.festive_delight.gingerbread_man": "Пряня",
     "item.festive_delight.gingerbread_cookie_dough_creeper": "Имбирное тесто в форме крипера",
-    "item.festive_delight.salmon_verrines": "Закуска с ласосем",
+    "item.festive_delight.salmon_verrines": "Закуска с лососем",
     "item.festive_delight.gingerbread_man_dough": "Имбирное тесто в форме пряни",
     "block.festive_delight.festive_chicken_stage_1": "Праздничная курица 1",
     "item.festive_delight.cinnamon_powder": "Корица",
@@ -20,7 +20,7 @@
     "block.festive_delight.cinnamon_bushripe": "Куст корицы",
     "item.festive_delight.rolling_pin": "Скалка",
     "item.festive_delight.spring_rolls": "Спринг-роллы",
-    "item.festive_delight.gingerbread_man_base": "Пустой пряня",
+    "item.festive_delight.gingerbread_man_base": "Пустой Пряня",
     "item_group.festive_delight.festive_delight": "Festive Delight",
     "effect.festive_delight.hot_heart": "Горячее сердце",
     "itemGroup.tabfestive_delight": "Festive Delight",
