--- a/assets/brewinandchewin/lang/ru_ru.json
+++ b/assets/brewinandchewin/lang/ru_ru.json
@@ -3,7 +3,7 @@
   "block.brewinandchewin.bloody_mary_tankard": "Кружка кровавой Мэри",
   "block.brewinandchewin.dread_nog_tankard": "Кружка яичного месива",
   "block.brewinandchewin.egg_grog_tankard": "Кружка с гоголем-моголем",
-  "block.brewinandchewin.fermentation_controller": "Контролер брожения",
+  "block.brewinandchewin.fermentation_controller": "Контроллер брожения",
   "block.brewinandchewin.fiery_fondue_pot": "Котелок с праздничным фондю",
   "block.brewinandchewin.flaxen_cheese_wheel": "Светло-жёлтая головка сыра",
   "block.brewinandchewin.glittering_grenadine_tankard": "Кружка ослепляющей жижи",
@@ -52,17 +52,17 @@
   "item.brewinandchewin.bloody_mary": "Кровавая Мэри",
   "item.brewinandchewin.cheesy_pasta": "Сырная паста",
   "item.brewinandchewin.cocoa_fudge": "Шоколадное фондю",
-  "item.brewinandchewin.creamy_onion_soup": "Луковый крем суп",
+  "item.brewinandchewin.creamy_onion_soup": "Луковый крем-суп",
   "item.brewinandchewin.dread_nog": "Яичное месиво",
-  "item.brewinandchewin.egg_grog": "Гогль-моголь",
+  "item.brewinandchewin.egg_grog": "Гоголь-моголь",
   "item.brewinandchewin.fiery_fondue": "Праздничное фондю",
   "item.brewinandchewin.flaxen_cheese_wedge": "Кусочек светло-жёлтого сыра",
   "item.brewinandchewin.glittering_grenadine": "Ослепляющая жижа",
-  "item.brewinandchewin.ham_and_cheese_sandwich": "Сэндич с ветчиной и сыром",
+  "item.brewinandchewin.ham_and_cheese_sandwich": "Сэндвич с ветчиной и сыром",
   "item.brewinandchewin.horror_lasagna": "Лазанья из фильмов ужасов",
   "item.brewinandchewin.jerky": "Джерки",
   "item.brewinandchewin.kimchi": "Кимчи",
-  "item.brewinandchewin.kippers": "Сушенная рыбка",
+  "item.brewinandchewin.kippers": "Сушеная рыбка",
   "item.brewinandchewin.kombucha": "Комбуча",
   "item.brewinandchewin.mead": "Медовуха",
   "item.brewinandchewin.pale_jane": "Бледная Джейн",
@@ -72,7 +72,7 @@
   "item.brewinandchewin.red_rum": "Красный ром",
   "item.brewinandchewin.rice_wine": "Рисовое вино",
   "item.brewinandchewin.saccharine_rum": "Сахарный ром",
-  "item.brewinandchewin.salty_folly": "Соленое безумие",
+  "item.brewinandchewin.salty_folly": "Солёное безумие",
   "item.brewinandchewin.scarlet_cheese_wedge": "Кусочек красного сыра",
   "item.brewinandchewin.scarlet_pierogies": "Красные вареники",
   "item.brewinandchewin.steel_toe_stout": "Железная бородавка",
