--- a/assets/moremobs/lang/ru_ru.json
+++ b/assets/moremobs/lang/ru_ru.json
@@ -17,7 +17,7 @@
 
   "item.mobs_of_mythology.automaton_spawn_egg": "Яйцо призыва автоматона",
   "item.mobs_of_mythology.kobold_spawn_egg": "Яйцо призыва гоблина",
-  "item.mobs_of_mythology.kobold_warrior_spawn_egg": "Яйцо призыва гоблина воина",
+  "item.mobs_of_mythology.kobold_warrior_spawn_egg": "Яйцо призыва гоблина-воина",
   "item.mobs_of_mythology.chupacabra_spawn_egg": "Яйцо призыва чупакабры",
   "item.mobs_of_mythology.wendigo_spawn_egg": "Яйцо призыва вендиго",
   "item.mobs_of_mythology.drake_spawn_egg": "Яйцо призыва ящера",
